fixed the spilling of images in Locals

--- a/client/src/assets/styles/App.scss
+++ b/client/src/assets/styles/App.scss
@@ -124,6 +124,7 @@
   width: 12.5em;
   min-height: 15em;
   max-height: 20em;
+  overflow-x: hidden;
 }
 #eventlocalusers p {
   margin: 0 0 0px;
